--- a/Kr2Sem2.vcxproj.filters
+++ b/Kr2Sem2.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClCompile Include="PersonalIntface.cpp">
       <Filter>Файлы ресурсов</Filter>
     </ClCompile>
+    <ClCompile Include="Algoritm.cpp">
+      <Filter>Файлы ресурсов</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CheckExeption.h">
@@ -72,6 +75,9 @@
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
     <ClInclude Include="PersonalInterface.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="Algoritm.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
